# databricks_citibike_project

./: .env.example  .gitignore  LICENSE  README.md  databricks.yml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  deploy.yml  run-job.yml
dashboard/: .dockerignore  .env.example  Dockerfile  README.md  app.py  databricks_client.py  insights.py  pyproject.toml  queries.py  requirements.txt
dashboard/.streamlit/: config.toml
fixtures/: sample_citibike_trips.csv
resources/: 00_download_trips_data_job.yml  01_medallion_pipeline_job.yml
scratch/: README.md
src/notebooks/00_landing/: 00_download_source_files.ipynb
src/notebooks/01_bronze/: 01_bronze_citibike.ipynb
src/notebooks/02_silver/: 02_silver_citibike.ipynb
src/notebooks/03_gold/: 03_gold_citibike.ipynb
src/shared/: canonical.py  udfs.py  utils.py
tests/: conftest.py
tests/integration/: test_udfs.py
tests/unit/: test_canonical.py  test_utils.py
